Pollus.Emscripten/WGPU/WGPUBrowserNative.cs


    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceReference")]
    extern public static unsafe void InstanceReference(Instance* instance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceRelease")]
    extern public static unsafe void InstanceRelease(Instance* instance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuPipelineLayoutSetLabel")]
    extern public static unsafe void PipelineLayoutSetLabel(PipelineLayout* pipelineLayout, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuPipelineLayoutSetLabel")]
    extern public static unsafe void PipelineLayoutSetLabel(PipelineLayout* pipelineLayout, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuPipelineLayoutSetLabel")]
    extern public static unsafe void PipelineLayoutSetLabel(PipelineLayout* pipelineLayout, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuPipelineLayoutReference")]
    extern public static unsafe void PipelineLayoutReference(PipelineLayout* pipelineLayout);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuPipelineLayoutRelease")]
    extern public static unsafe void PipelineLayoutRelease(PipelineLayout* pipelineLayout);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetDestroy")]
    extern public static unsafe void QuerySetDestroy(QuerySet* querySet);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetGetCount")]
    extern public static unsafe uint QuerySetGetCount(QuerySet* querySet);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetGetType")]
    extern public static unsafe QueryType QuerySetGetType(QuerySet* querySet);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetSetLabel")]
    extern public static unsafe void QuerySetSetLabel(QuerySet* querySet, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetSetLabel")]
    extern public static unsafe void QuerySetSetLabel(QuerySet* querySet, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetSetLabel")]
    extern public static unsafe void QuerySetSetLabel(QuerySet* querySet, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetReference")]
    extern public static unsafe void QuerySetReference(QuerySet* querySet);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQuerySetRelease")]
    extern public static unsafe void QuerySetRelease(QuerySet* querySet);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueOnSubmittedWorkDone")]
    extern public static unsafe void QueueOnSubmittedWorkDone(Queue* queue, PfnQueueWorkDoneCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueSetLabel")]
    extern public static unsafe void QueueSetLabel(Queue* queue, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueSetLabel")]
    extern public static unsafe void QueueSetLabel(Queue* queue, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueSetLabel")]
    extern public static unsafe void QueueSetLabel(Queue* queue, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueSubmit")]
    extern public static unsafe void QueueSubmit(Queue* queue, nuint commandCount, CommandBuffer** commands);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueSubmit")]
    extern public static unsafe void QueueSubmit(Queue* queue, nuint commandCount, ref CommandBuffer* commands);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteBuffer")]
    extern public static unsafe void QueueWriteBuffer(Queue* queue, Buffer* buffer, ulong bufferOffset, void* data, nuint size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, ImageCopyTexture* destination, void* data, nuint dataSize, TextureDataLayout* dataLayout, Extent3D* writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, ImageCopyTexture* destination, void* data, nuint dataSize, TextureDataLayout* dataLayout, in Extent3D writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, ImageCopyTexture* destination, void* data, nuint dataSize, in TextureDataLayout dataLayout, Extent3D* writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, ImageCopyTexture* destination, void* data, nuint dataSize, in TextureDataLayout dataLayout, in Extent3D writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, in ImageCopyTexture destination, void* data, nuint dataSize, TextureDataLayout* dataLayout, Extent3D* writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, in ImageCopyTexture destination, void* data, nuint dataSize, TextureDataLayout* dataLayout, in Extent3D writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, in ImageCopyTexture destination, void* data, nuint dataSize, in TextureDataLayout dataLayout, Extent3D* writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueWriteTexture")]
    extern public static unsafe void QueueWriteTexture(Queue* queue, in ImageCopyTexture destination, void* data, nuint dataSize, in TextureDataLayout dataLayout, in Extent3D writeSize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueReference")]
    extern public static unsafe void QueueReference(Queue* queue);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuQueueRelease")]
    extern public static unsafe void QueueRelease(Queue* queue);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleSetLabel")]
    extern public static unsafe void RenderBundleSetLabel(RenderBundle* renderBundle, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleSetLabel")]
    extern public static unsafe void RenderBundleSetLabel(RenderBundle* renderBundle, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleSetLabel")]
    extern public static unsafe void RenderBundleSetLabel(RenderBundle* renderBundle, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleReference")]
    extern public static unsafe void RenderBundleReference(RenderBundle* renderBundle);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleRelease")]
    extern public static unsafe void RenderBundleRelease(RenderBundle* renderBundle);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderDraw")]
    extern public static unsafe void RenderBundleEncoderDraw(RenderBundleEncoder* renderBundleEncoder, uint vertexCount, uint instanceCount, uint firstVertex, uint firstInstance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderDrawIndexed")]
    extern public static unsafe void RenderBundleEncoderDrawIndexed(RenderBundleEncoder* renderBundleEncoder, uint indexCount, uint instanceCount, uint firstIndex, int baseVertex, uint firstInstance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderDrawIndexedIndirect")]
    extern public static unsafe void RenderBundleEncoderDrawIndexedIndirect(RenderBundleEncoder* renderBundleEncoder, Buffer* indirectBuffer, ulong indirectOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderDrawIndirect")]
    extern public static unsafe void RenderBundleEncoderDrawIndirect(RenderBundleEncoder* renderBundleEncoder, Buffer* indirectBuffer, ulong indirectOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderFinish")]
    extern public static unsafe RenderBundle* RenderBundleEncoderFinish(RenderBundleEncoder* renderBundleEncoder, RenderBundleDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderFinish")]
    extern public static unsafe RenderBundle* RenderBundleEncoderFinish(RenderBundleEncoder* renderBundleEncoder, in RenderBundleDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderInsertDebugMarker")]
    extern public static unsafe void RenderBundleEncoderInsertDebugMarker(RenderBundleEncoder* renderBundleEncoder, byte* markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderInsertDebugMarker")]
    extern public static unsafe void RenderBundleEncoderInsertDebugMarker(RenderBundleEncoder* renderBundleEncoder, in byte markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderInsertDebugMarker")]
    extern public static unsafe void RenderBundleEncoderInsertDebugMarker(RenderBundleEncoder* renderBundleEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderPopDebugGroup")]
    extern public static unsafe void RenderBundleEncoderPopDebugGroup(RenderBundleEncoder* renderBundleEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderPushDebugGroup")]
    extern public static unsafe void RenderBundleEncoderPushDebugGroup(RenderBundleEncoder* renderBundleEncoder, byte* groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderPushDebugGroup")]
    extern public static unsafe void RenderBundleEncoderPushDebugGroup(RenderBundleEncoder* renderBundleEncoder, in byte groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderPushDebugGroup")]
    extern public static unsafe void RenderBundleEncoderPushDebugGroup(RenderBundleEncoder* renderBundleEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetBindGroup")]
    extern public static unsafe void RenderBundleEncoderSetBindGroup(RenderBundleEncoder* renderBundleEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, uint* dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetBindGroup")]
    extern public static unsafe void RenderBundleEncoderSetBindGroup(RenderBundleEncoder* renderBundleEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, in uint dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetIndexBuffer")]
    extern public static unsafe void RenderBundleEncoderSetIndexBuffer(RenderBundleEncoder* renderBundleEncoder, Buffer* buffer, IndexFormat format, ulong offset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetLabel")]
    extern public static unsafe void RenderBundleEncoderSetLabel(RenderBundleEncoder* renderBundleEncoder, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetLabel")]
    extern public static unsafe void RenderBundleEncoderSetLabel(RenderBundleEncoder* renderBundleEncoder, in byte label);
